# jfmt.rs

./: .changie.yaml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-all.yml
changes/: 1.2.0.md  1.2.1.md
changes/unreleased/: Added-20220209-201146.yaml
scripts/: release.py
src/: main.rs
