[package]
name = "jfmt"
version = "1.1.1"
authors = ["Wes Van Melle <van.melle.wes@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["json", "formatter", "cli"]
categories = ["command-line-utilities", "text-processing"]
description = """
jfmt is a command-line tool for formatting json files in both readable and
compact formats.  It supports stdin/stdout shell usage, as well as working on
files directly."""
readme = "README.md"
documentation = "https://github.com/scruffystuffs/jfmt.rs"
homepage = "https://github.com/scruffystuffs/jfmt.rs"
repository = "https://github.com/scruffystuffs/jfmt.rs"
include = [
    "src/main.rs",
    "Cargo.toml"
]

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "derive"] }
serde = "1.0.136"
serde_json = "1.0.78"
serde-transcode = "1.1.1"

[profile.release]
lto = true
